# gnome-cloudflare-warp-toggle

./: .eslintrc.yml  .gitignore  README.md  install.sh  meson.build  org.gnome.Shell.Extensions.WarpQuickSettings.gresource.xml  package-lock.json  package.json
src/: extension.js  indicator.js  metadata.json  prefs.js  util.js
src/schemas/: gschemas.compiled  org.gnome.shell.extensions.cloudflare-warp-toggle.gschema.xml
